# boostbychat

backend/: .env  Cargo.toml
backend/src/: main.rs
frontend/: .pnp.cjs  package.json  postcss.config.cjs  tailwind.config.cjs  tailwind.config.js  vite.config.ts
frontend/src/: App.vue  index.css  main.ts
frontend/src/components/: EmployeeEntry.vue  EmployeeTable.vue  WalletCheck.vue  WalletConnect.vue
frontend/src/pages/: AddEmployee.vue  HomePage.vue  VerifyEmployee.vue
frontend/src/router/: index.ts
