[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# ── async runtime & web ───────────────────────────
tokio      = { version = "1.37", features = ["full"] }
axum       = "0.7"
tower-http = { version = "0.5", features = ["cors"] }
hyper      = "1"          # pulled by axum; explicit for clarity

# ── database (MySQL) ─────────────────────────────
sqlx = { version = "0.7", features = ["mysql", "runtime-tokio-rustls", "macros"] }

# ── utils ────────────────────────────────────────
serde      = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy    = "0.15"
anyhow     = "1.0"
