[package]
name    = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# ── async runtime & web stack ─────────────────────────────────────
tokio       = { version = "1.37", features = ["full"] }
axum        = "0.7"
tower-http  = { version = "0.5", features = ["cors"] }
hyper       = "1"

# ── database (MySQL via SQLx) ────────────────────────────────────
sqlx        = { version = "0.7", features = ["mysql", "runtime-tokio-rustls", "macros"] }

# ── utilities ────────────────────────────────────────────────────
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
dotenvy     = "0.15"
anyhow      = "1"
tracing     = "0.1"
tracing-subscriber = "0.3"
